--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -97,46 +97,31 @@ body {
     left: 25px;
     z-index: 15;
 }
-/*
-@supports not (background-clip: text) {
-    #calendar-clock.inset-shadow {
-        color: rgba(0, 0, 0, 0.3);
-        background: Gray;
-        text-shadow: rgba(255, 255, 255, 0.4) 2px 2px 2px, 0 0 0 rgba(0, 0, 0, 0.5);
-    }
 
-    header .inset-shadow {
-        color: rgba(0, 0, 0, 0.3);
-        background: #8C2633;
-        text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.4), 0 0 0 rgba(0, 0, 0, 0.6);
-    }
+
+.clock-container.inset-shadow {
+    color: transparent;
+    background: Gray;
+    text-shadow: rgba(255, 255, 255, 0.4) 2px 2px 2px, 0 0 0 rgba(0, 0, 0, 0.5);
 }
 
+header .inset-shadow {
+    color: transparent;
+    background: #8C2633;
+    text-shadow: rgba(255, 255, 255, 0.4) 2px 2px 2px, 0 0 0 rgba(0, 0, 0, 0.5);
+}
 
-    #calendar-clock.inset-shadow {
-        color: rgba(0, 0, 255, 1);
-        text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
-    }
+.clock-container.alt-shadow {
+    color: rgba(0, 0, 0, 0.4);
+    background: Gray;
+    text-shadow: rgba(255, 255, 255, 0.4) 2px 2px 2px, 0 0 0 rgba(0, 0, 0, 0.5);
+}
 
-    header .inset-shadow {
-        color: Blue;
-        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
-    }
-
-*/
-
-    #calendar-clock.inset-shadow {
-        color: transparent;
-        background: Gray;
-        text-shadow: rgba(255, 255, 255, 0.4) 2px 2px 2px, 0 0 0 rgba(0, 0, 0, 0.5);
-    }
-
-    header .inset-shadow {
-        color: transparent;
-        background: #8C2633;
-        text-shadow: rgba(255, 255, 255, 0.4) 2px 2px 2px, 0 0 0 rgba(0, 0, 0, 0.5);
-    }
-
+header .alt-shadow {
+    color: rgba(0, 0, 0, 0.5);
+    background: #8C2633;
+    text-shadow: rgba(255, 255, 255, 0.4) 2px 2px 2px, 0 0 0 rgba(0, 0, 0, 0.5);
+}
 
 header {
     width: 100%;
