--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -687,10 +687,31 @@ header {
 }
 
 .audio-container {
-    min-width: 33%;
+    width: 25%;
     box-shadow: 4px 4px 15px 2px black;
     border-radius: 8px;
     background-color: #85714d;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    margin: 16px;
+    padding: 10px;"
+}
+
+.audio-container h3 {
+    text-align: center;
+    color: black;
+    font-size: 1.25rem;
+}
+
+.audio-container p {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    text-align: justify;
+    color: black;
+    text-indent: 2rem;
 }
 
 #YouthMentalHealth {
