Changed the filename extensions of the audio files from ogg to oga

--- a/resources/css/style-dist.css
+++ b/resources/css/style-dist.css
@@ -1153,10 +1153,11 @@ header {
 
 .clock-container h2 {
     font-size: 1.5rem;
-    font-weight: 300;
+    font-weight: 200;
 }
 
 footer > a {
+    font-size: 1.5rem! Important;
     color: inherit;
     line-height: 2rem;
     margin-left: 2rem;
@@ -1164,6 +1165,10 @@ footer > a {
 
 footer > div > h2 {
     margin-right: 0.25rem;
+}
+
+#calendar-clock {
+    font-weight: 200;
 }
 
 #diffuser {
