--- a/resources/css/style-dist.css
+++ b/resources/css/style-dist.css
@@ -453,7 +453,7 @@ header {
     font-family: 'Comic Sans MS', 'Architects Daughter';
     font-size: 1.5rem;
     margin: 0 auto;
-    margin-top: 200px;
+    margin-top: 220px;
     margin-bottom: 250px;
     padding: 1rem;
 }
@@ -547,7 +547,7 @@ header {
     display: Inline-flex;
     padding: 4rem;
     padding-top: 0;
-    margin-top: 200px;
+    margin-top: 250px;
 }
 
 #specialized-categories {
@@ -742,7 +742,7 @@ header {
     display: flex;
     margin: 0 auto;
     height: auto;
-    width: 450px;
+    width: 600px;
     margin-bottom: 2rem;
 }
 
@@ -790,7 +790,7 @@ header {
 #RadioShow .content-container {
     width: 100%;
     padding: 4rem;
-    margin-top: 155px;
+    margin-top: 216px;
 }
 
 #RadioShow .content-container>h3 {
@@ -799,7 +799,7 @@ header {
     font-size: 2rem;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 4rem;
 }
 
 #RadioShow .content-container>p {
@@ -1016,7 +1016,7 @@ header {
 
 #Testimonials #testimonials-content {
     margin: 4rem;
-    margin-top: 225px;
+    margin-top: 375px;
 }
 
 #Testimonials #testimonials-content p {
@@ -1048,7 +1048,8 @@ header {
 }
 
 #Contact {
-    background: url(../../resources/media/images/office-picture-rotated-and-centered.jpg);
+    background: url(../../resources/media/images/office-picture-lens-blur-75.png);
+    height: 100%;
     width: 100%;
     Padding: 0;
     background-repeat: no-repeat;
@@ -1070,7 +1071,6 @@ header {
     margin: 0 auto;
     height: 768px;
 }
-
 
 #Contact #contact-container #provisional-text {
     font-family: 'Comic Sans MS', 'Architects Daughter';
@@ -1098,7 +1098,7 @@ header {
     -webkit-transform: translateX(-47%);
     -ms-transform: translateX(-47%);
     transform: translateX(-47%);
-    margin-top: 180px;
+    margin-top: 210px;
     background-color: rgba(0, 0, 0, 0.4);
     padding: 1rem;
     border-radius: 4px;
@@ -1111,7 +1111,7 @@ header {
     font-size: 1.125rem;
     line-height: 1.5rem;
     position: absolute;
-    Bottom: 30px;
+    Bottom: 80px;
     left: 50px;
     background-color: rgba(149, 38, 51, 0.7);
     padding: 1rem;
@@ -1125,7 +1125,7 @@ header {
     font-size: 1.125rem;
     line-height: 1.5rem;
     position: absolute;
-    bottom: 30px;
+    bottom: 80px;
     right: 50px;
     background-color: rgba(149, 38, 51, 0.7);
     padding: 1rem;
