Updated contact page

--- a/resources/css/style-dist.css
+++ b/resources/css/style-dist.css
@@ -63,8 +63,8 @@ body {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 1366px;
     margin: 0 auto;
 }
@@ -87,7 +87,7 @@ body {
     width: 185px;
     height: auto;
     -webkit-box-shadow: 4px 4px 15px 4px rgba(0, 0, 0, 0.8);
-    box-shadow: 4px 4px 15px 4px rgba(0, 0, 0, 0.8);
+            box-shadow: 4px 4px 15px 4px rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 25px;
     left: 25px;
@@ -98,7 +98,7 @@ body {
     width: 185px;
     height: auto;
     -webkit-box-shadow: 4px 4px 15px 4px rgba(0, 0, 0, 0.8);
-    box-shadow: 4px 4px 15px 4px rgba(0, 0, 0, 0.8);
+            box-shadow: 4px 4px 15px 4px rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 25px;
     left: 25px;
@@ -144,12 +144,12 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin: 1rem;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     line-height: 4rem;
 }
 
@@ -159,14 +159,14 @@ header {
     padding-top: 2px;
     padding-bottom: 2px;
     -webkit-box-shadow: 4px 4px 6px 2px rgba(0, 0, 0, 0.8);
-    box-shadow: 4px 4px 6px 2px rgba(0, 0, 0, 0.8);
+            box-shadow: 4px 4px 6px 2px rgba(0, 0, 0, 0.8);
 }
 
 .middle {
     padding: 10px;
     background-color: #f1e6b2;
     -webkit-box-shadow: inset 4px 4px 6px 2px rgba(0, 0, 0, 0.8);
-    box-shadow: inset 4px 4px 6px 2px rgba(0, 0, 0, 0.8);
+            box-shadow: inset 4px 4px 6px 2px rgba(0, 0, 0, 0.8);
 }
 
 .outer {
@@ -239,8 +239,8 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background-color: #f1e6b2;
 }
 
@@ -254,8 +254,8 @@ header {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin: 0 auto;
     width: 75%;
     margin-bottom: 2rem;
@@ -290,11 +290,11 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-family: 'Comic Sans MS', 'Architects Daughter';
     color: #631824;
 }
@@ -340,11 +340,11 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 #words-to-live-by h2:nth-of-type(1) {
@@ -386,8 +386,8 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     color: black;
     background-color: #f1e6b2;
 }
@@ -398,8 +398,8 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     position: relative;
     font-size: 1.5rem;
     background-color: #f1e6b2;
@@ -425,7 +425,7 @@ header {
     padding: 0.5rem;
     border-radius: 4px;
     -webkit-box-shadow: 4px 4px 6px 2px rgba(0, 0, 0, 0.7);
-    box-shadow: 4px 4px 6px 2px rgba(0, 0, 0, 0.7);
+            box-shadow: 4px 4px 6px 2px rgba(0, 0, 0, 0.7);
 }
 
 #Clinical {
@@ -441,19 +441,19 @@ header {
     background-color: #85714d;
     padding: 1rem;
     -webkit-box-shadow: 4px 4px 15px 2px black;
-    box-shadow: 4px 4px 15px 2px black;
+            box-shadow: 4px 4px 15px 2px black;
     border-radius: 8px;
 }
 
 #clinical-content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     font-family: 'Comic Sans MS', 'Architects Daughter';
     font-size: 1.5rem;
     margin: 0 auto;
-    margin-top: 220px;
+    margin-top: 200px;
     margin-bottom: 250px;
     padding: 1rem;
 }
@@ -484,8 +484,8 @@ header {
     Display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     Width: 550px;
     Background: #85714d;
 }
@@ -547,7 +547,7 @@ header {
     display: Inline-flex;
     padding: 4rem;
     padding-top: 0;
-    margin-top: 250px;
+    margin-top: 200px;
 }
 
 #specialized-categories {
@@ -557,7 +557,7 @@ header {
     padding: 1rem;
     width: 100%;
     -ms-flex-pack: distribute;
-    justify-content: space-around
+        justify-content: space-around
 }
 
 #specialized-content h3 {
@@ -570,12 +570,12 @@ header {
     width: 30%;
     Flex-direction: column;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: #85714d;
     margin-right: 1rem;
     -webkit-box-shadow: 4px 4px 15px 2px black;
-    box-shadow: 4px 4px 15px 2px black;
+            box-shadow: 4px 4px 15px 2px black;
     border-radius: 8px;
 }
 
@@ -621,12 +621,12 @@ header {
     Width: 40%;
     Flex-direction: column;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: #85714d;
     margin-right: 1rem;
     -webkit-box-shadow: 4px 4px 15px 2px black;
-    box-shadow: 4px 4px 15px 2px black;
+            box-shadow: 4px 4px 15px 2px black;
     border-radius: 8px;
 
 }
@@ -651,7 +651,6 @@ header {
 
 .hover-box {
     -webkit-transition: color linear 500ms, background-color linear 500ms;
-    -o-transition: color linear 500ms, background-color linear 500ms;
     transition: color linear 500ms, background-color linear 500ms;
 }
 
@@ -665,15 +664,15 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     Width: 30%;
     background-color: #85714d;
     -webkit-box-shadow: 4px 4px 15px 2px black;
-    box-shadow: 4px 4px 15px 2px black;
+            box-shadow: 4px 4px 15px 2px black;
     border-radius: 8px;
 }
 
@@ -742,7 +741,7 @@ header {
     display: flex;
     margin: 0 auto;
     height: auto;
-    width: 600px;
+    width: 450px;
     margin-bottom: 2rem;
 }
 
@@ -790,7 +789,7 @@ header {
 #RadioShow .content-container {
     width: 100%;
     padding: 4rem;
-    margin-top: 216px;
+    margin-top: 155px;
 }
 
 #RadioShow .content-container>h3 {
@@ -799,7 +798,7 @@ header {
     font-size: 2rem;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 1rem;
 }
 
 #RadioShow .content-container>p {
@@ -826,7 +825,7 @@ header {
 .audio-container {
     width: 25%;
     -webkit-box-shadow: 4px 4px 15px 2px black;
-    box-shadow: 4px 4px 15px 2px black;
+            box-shadow: 4px 4px 15px 2px black;
     border-radius: 8px;
     background-color: #85714d;
     margin: 16px;
@@ -845,7 +844,7 @@ header {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+        flex-wrap: wrap;
     width: 100%;
     text-align: justify;
     color: black;
@@ -866,8 +865,8 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     color: black;
     background-color: #f1e6b2;
     padding-top: 0;
@@ -888,18 +887,18 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 50%;
     text-align: justify;
     margin: 0 auto;
     padding: 2rem;
     background-color: #85714D;
     -webkit-box-shadow: 4px 4px 15px 2px black;
-    box-shadow: 4px 4px 15px 2px black;
+            box-shadow: 4px 4px 15px 2px black;
     border-radius: 8px;
 }
 
@@ -944,11 +943,11 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 50%;
     text-align: justify;
     margin: 0 auto;
@@ -956,7 +955,7 @@ header {
     margin-right: 2rem;
     background-color: #85714D;
     -webkit-box-shadow: 4px 4px 15px 2px black;
-    box-shadow: 4px 4px 15px 2px black;
+            box-shadow: 4px 4px 15px 2px black;
     border-radius: 8px;
 }
 
@@ -1007,8 +1006,8 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     color: black;
     background-color: #f1e6b2;
     font-family: 'Comic Sans MS', 'Architects Daughter';
@@ -1016,7 +1015,7 @@ header {
 
 #Testimonials #testimonials-content {
     margin: 4rem;
-    margin-top: 375px;
+    margin-top: 225px;
 }
 
 #Testimonials #testimonials-content p {
@@ -1042,14 +1041,11 @@ header {
     width: 60%;
     height: 3px;
     background: -webkit-gradient(linear, left top, right top, from(rgba(133, 113, 77, 0)), color-stop(#85714d), to(rgba(133, 113, 77, 0)));
-    background: -webkit-linear-gradient(left, rgba(133, 113, 77, 0), #85714d, rgba(133, 113, 77, 0));
-    background: -o-linear-gradient(left, rgba(133, 113, 77, 0), #85714d, rgba(133, 113, 77, 0));
     background: linear-gradient(to right, rgba(133, 113, 77, 0), #85714d, rgba(133, 113, 77, 0));
 }
 
 #Contact {
-    background: url(../../resources/media/images/office-picture-lens-blur-50.png);
-    height: 100%;
+    background: url(../../resources/media/images/office-picture-rotated-and-centered.jpg);
     width: 100%;
     Padding: 0;
     background-repeat: no-repeat;
@@ -1063,14 +1059,15 @@ header {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     position: relative;
     color: white;
     margin: 0 auto;
     height: 768px;
 }
+
 
 #Contact #contact-container #provisional-text {
     font-family: 'Comic Sans MS', 'Architects Daughter';
@@ -1080,8 +1077,8 @@ header {
     top: 100px;
     left: 50%;
     -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     background-color: rgba(52, 123, 33, 0.0);
     padding: 1rem;
     border-radius: 4px;
@@ -1096,9 +1093,9 @@ header {
     position: absolute;
     left: 47%;
     -webkit-transform: translateX(-47%);
-    -ms-transform: translateX(-47%);
-    transform: translateX(-47%);
-    margin-top: 210px;
+        -ms-transform: translateX(-47%);
+            transform: translateX(-47%);
+    margin-top: 180px;
     background-color: rgba(0, 0, 0, 0.4);
     padding: 1rem;
     border-radius: 4px;
@@ -1111,7 +1108,7 @@ header {
     font-size: 1.125rem;
     line-height: 1.5rem;
     position: absolute;
-    Bottom: 80px;
+    Bottom: 30px;
     left: 50px;
     background-color: rgba(149, 38, 51, 0.7);
     padding: 1rem;
@@ -1125,7 +1122,7 @@ header {
     font-size: 1.125rem;
     line-height: 1.5rem;
     position: absolute;
-    bottom: 80px;
+    bottom: 30px;
     right: 50px;
     background-color: rgba(149, 38, 51, 0.7);
     padding: 1rem;
